@@ -1,6 +1,10 @@
 Release Notes - Mesos - Version 0.29.0 (WIP)
 --------------------------------------------
 
+Deprecations:
+  * [MESOS-5001] - The 'allocator/event_queue_dispatches' metric is now
+    deprecated in favor 'of allocator/mesos/event_queue_dispatches'.
+
 Additional API Changes:
   * [MESOS-4735] - Add 'filename' field to CommandInfo.URI in Scheduler API
     and v1 Scheduler HTTP API.
